# midi_hotkey

./: Cargo.toml  README.md
.cargo/: config
src/: hotkey.rs  lib.rs  midi_hotkey.json  util.rs
