[package]
name = "midi_hotkey"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nih_plug = { path = "../nih-plug"}
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
process_path = "0.1.4"
