[package]
name = "midi_hotkey"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nih_plug = { git="https://github.com/robbert-vdh/nih-plug", rev="5ae23f52f4a7c23d3a2f3c9911a695788a26522d"}
nih_plug_iced = { git="https://github.com/robbert-vdh/nih-plug", rev="5ae23f52f4a7c23d3a2f3c9911a695788a26522d"}
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
process_path = "0.1.4"
queues = "1.0.2"
